mdapipkg/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>Active_Product_Check__c</fullName>
        <formula>IF ( Not_Active_Product__c = TRUE, TRUE, Product__r.IsActive )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Product Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connected_Id__c</fullName>
        <externalId>true</externalId>
        <label>Connected Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Connection_Name__c</fullName>
        <label>Connection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Bump_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bump Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Active_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Active Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrderForm</label>
        <referenceTo>OrderForm__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Item_Bundle__c</fullName>
        <label>Order Item Bundle</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Variant</label>
        <referenceTo>Product_Variant__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Product_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Standard_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Order-{000000}</displayFormat>
        <label>Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_Product</fullName>
        <active>true</active>
        <errorConditionFormula>Active_Product_Check__c = FALSE</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>This Product is no longer active, please select an Active Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Price_Required</fullName>
        <active>true</active>
        <description>If Standard Price isn&apos;t checked, Product Price field is required.</description>
        <errorConditionFormula>(Use_Standard_Price__c = FALSE)
&amp;&amp;
ISBLANK( Product_Price__c )</errorConditionFormula>
        <errorMessage>You need to either place a custom Product Price or enabled Use Standard Price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Product</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Please select a Product</errorMessage>
    </validationRules>
</CustomObject>